# voice-token

./: .env  .gitignore  CMakeLists-ExternalProjects.txt  CMakeLists.txt  README.md  README.txt  deploy_telos_mainnet.sh  deploy_telos_testnet.sh  hydra.yml  jest.config.js  package.json
.github/scripts/: only_collaborators.sh
.github/workflows/: build.yml  tests.yml
include/: decay.hpp  trail.hpp  voice.hpp
include/tables/: account.hpp  currency_stats.hpp  old_voice.hpp
scripts/: compile.js  deploy.command.js  deploy.js  helper.js  hypha.js  propose_deploy.js
src/: CMakeLists-ExternalProjects.txt  CMakeLists.txt  decay.cpp  voice.cpp
test/: voice.test.js
tests/: CMakeLists.txt  decay_test.cpp  voice.test.ts
tests/utils/: Assets.ts  Helpers.ts
